exp-19 Change file structure to use FSD

--- a/src/shared/styles/theme/index.scss
+++ b/src/shared/styles/theme/index.scss
@@ -1,4 +1,4 @@
-// _mantine is imported in the additionalData of vite.config.ts
+// mantine is imported in the additionalData of vite.config.ts
 @use './themeOverrides';
 @use './themeOverridesLight';
 @use './themeOverridesDark';
