--- a/src/shared/styles/theme/themeOverridesDark.scss
+++ b/src/shared/styles/theme/themeOverridesDark.scss
@@ -1,8 +1,8 @@
 /* For dark mode */
 :root[data-mantine-color-scheme='dark'] {
-  --mantine-color-body: var(--mantine-color-dark-7) !important;
+  --mantine-color-body: var(--mantine-color-ironwood-7);
 
-  .mantine-Tabs-root {
-    background-color: var(--mantine-color-dark-6) !important;
+  .mantine-Card-root {
+    background-color: var(--mantine-color-ironwood-6);
   }
 }
