--- a/src/shared/styles/theme/themeOverridesLight.scss
+++ b/src/shared/styles/theme/themeOverridesLight.scss
@@ -1,8 +1,12 @@
 /* For light mode */
 :root[data-mantine-color-scheme='light'] {
-  --mantine-color-body: var(--mantine-color-gray-0) !important;
+  --mantine-color-body: var(--mantine-color-oat-5);
 
-  .mantine-Tabs-root {
-    background-color: var(--mantine-color-white) !important;
+  .mantine-Card-root {
+    background-color: var(--mantine-color-oat-0);
   }
+
+  // .mantine-Tabs-root {
+  //   background-color: var(--mantine-color-white) !important;
+  // }
 }
